--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mitto/magento2-login",
     "description": "Mitto login with SMS",
     "require": {
-        "magento/framework": "100.*|101.*|102.*",
+        "magento/framework": "100.*|101.*|102.*|103.*",
         "mitto/magento2-core": ">=0.0.1"
     },
     "type": "magento2-module",
